--- a/css/estil.css
+++ b/css/estil.css
@@ -1,65 +1,65 @@
- * {
-  box-sizing: border-box;
+* {font-family: sans-serif;}
+
+.cap, .peu, .itedu {
+  max-width: 1100px;
+  padding: 20px 0;
+  margin: auto;
+  text-align: center;
 }
 
 .container {
-  max-width: 1080px;
-  margin: 0 auto;
+  max-width: 1100px; 
+  margin: auto;
   display: grid;
-  grid-template-columns: repeat(12, [col-start] 1fr);
-  gap: 20px;
+  grid-template-areas:
+    'item1 item2 item2 item3'
+    'item4 item5 item6 item7'
+    'item8 item8 item9 item10'
+    'item11 item12 item13 item13';
+  gap: 0;
 }
 
-nav ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+.item1  { grid-area: item1; }
+.item2  { grid-area: item2; }
+.item3  { grid-area: item3; }
+.item4  { grid-area: item4; }
+.item5  { grid-area: item5; }
+.item6  { grid-area: item6; }
+.item7  { grid-area: item7; }
+.item8  { grid-area: item8; }
+.item9  { grid-area: item9; }
+.item10 { grid-area: item10; }
+.item11 { grid-area: item11; }
+.item12 { grid-area: item12; }
+.item13 { grid-area: item13; }
+
+.container img {
+    width:100%;
+    height:100%;
 }
 
-/* Mobile first */
-.container > * {
-  border: 1px solid green;
-  background-color: beige;
-  padding: 10px;
-  grid-column: col-start / span 12;
-}
+/* El filtre de brillantor si hover */
+.container img:hover{
+      filter: brightness(60%);
+    }
 
-@media (min-width: 576px) {
-  .sidebar {
-    grid-column: col-start / span 3;
-    grid-row: 3;
-  }
-  .ads {
-    grid-column: col-start / span 3;
-  }
-  .content, .footer {
-    grid-column: col-start 4 / span 9;
-  }
-  nav ul {
-    display: flex;
-    justify-content: space-between;
-  }
-}
-
-@media (min-width: 768px) {
-  .nav {
-    grid-column: col-start / span 2;
-    grid-row: 2 / 4;
-  }
-  .content {
-    grid-column: col-start 3 / span 8;
-    grid-row: 2 / 4;
-  }
-  .sidebar {
-    grid-column: col-start 11 / span 2;
-  }
-  .ads {
-    grid-column: col-start 11 / span 2;
-  }
-  .footer {
-    grid-column: col-start / span 12;
-  }
-  nav ul {
-    flex-direction: column;
+/* comportament responsiu: si la pantalla és menuda --> 1 columna */
+@media (max-width: 650px) {
+.container { 
+    grid-template-areas:
+    'item1'
+    'item2'
+    'item3'
+    'item4'
+    'item5'
+    'item6'
+    'item7'
+    'item8'
+    'item9'
+    'item10'
+    'item11'
+    'item12'
+    'item13';
+    margin: 0 20%;
   }
 }
